<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:a="http://schemas.android.com/apk/res/android"
    a:orientation="vertical"
    a:layout_width="fill_parent"
    a:layout_height="fill_parent"
    a:background="#FFF"
    a:gravity="left"
    >
	
	<View
	    a:layout_weight="1"
	    a:layout_width="wrap_content"
	    a:layout_height="0px"
	    />
	
	<LinearLayout 
	    a:layout_width="fill_parent"
	    a:layout_height="wrap_content"
	    a:orientation="horizontal"
   		a:gravity="center"
	    a:layout_margin="10dp"
	    >
		<TextView 
			a:text="@string/flight_name_label"
			a:layout_width="wrap_content"
			a:layout_height="wrap_content"
			a:textSize="14sp"
			a:textStyle="bold"
			a:textColor="#000"
			/>
		<EditText 
			a:id="@+id/flight_name_edit"
			a:layout_width="fill_parent"
			a:layout_height="wrap_content"
			a:gravity="center"
			a:textColor="#73b20e"
			a:text="@string/flight_name_example_text"
			a:inputType="text"
			/>
	</LinearLayout>
	
	<LinearLayout 
	    a:layout_width="fill_parent"
	    a:layout_height="wrap_content"
	    a:orientation="horizontal"
   		a:gravity="center"
	    a:layout_margin="10dp"
	    >
		<TextView 
			a:text="@string/flight_details_label"
			a:layout_width="wrap_content"
			a:layout_height="wrap_content"
			a:textSize="14sp"
			a:textStyle="bold"
			a:textColor="#000"
			/>
		<EditText 
			a:id="@+id/flight_details_edit"
			a:layout_width="fill_parent"
			a:layout_height="wrap_content"
			a:gravity="center"
			a:textColor="#73b20e"
			a:text="@string/flight_details_example_text"
			a:inputType="text"
			/>
	</LinearLayout>	
	
	<!-- Just decorative, so no content description. -->
	<ImageView
	    a:layout_weight="1"
	    a:layout_width="wrap_content"
	    a:layout_height="0px"
	    a:gravity="center"
	    a:src="@drawable/ic_launcher_web"
	    a:contentDescription="@string/decorative_image_content_description"
		a:layout_gravity="center"
	    />
	
	<View
	    a:layout_weight="1"
	    a:layout_width="wrap_content"
	    a:layout_height="0px"
	    />
	
	<Button 
		a:id="@+id/help_button"
		a:layout_width="wrap_content"
		a:layout_height="wrap_content"
		a:layout_gravity="center"
		a:text="@string/help_button"
	    a:layout_margin="10dp"
	    a:padding="10dp"
	    a:textStyle="bold"
	    a:textColor="#FFF"
	    a:background="@drawable/htc_button"
		/>
</LinearLayout>
