<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="fill_parent"
    a:layout_height="wrap_content"
    >
	<LinearLayout 
	    a:orientation="vertical"
	    a:layout_width="fill_parent"
	    a:layout_height="wrap_content"
	    a:gravity="top"
	    a:background="@drawable/white_rounded_and_shadow"
	    a:layout_marginLeft="10dp"
	    a:layout_marginRight="10dp"
	    a:padding="10dp"
	    >	
		<TextView  
		    a:layout_height="wrap_content"
		    a:layout_width="fill_parent"
		    a:textSize="20sp"
		    a:textStyle="bold"
		    a:textColor="#000"	    
		    a:padding="5dp"
		    a:text="@string/edit_view_title"
		    />	    
		<TextView  
			a:id="@+id/next_flight_name" 
		    a:layout_height="wrap_content"
		    a:layout_width="wrap_content"
		    a:padding="5dp"
		    a:textSize="14sp"
		    a:textStyle="bold"
		    a:textColor="#000"
		    a:gravity="center"	    
			a:text="@string/flight_name_example_text"
		    />
		<TextView  
			a:id="@+id/next_flight_details" 
		    a:layout_height="wrap_content"
		    a:layout_width="wrap_content"
		    a:padding="5dp"
		    a:textSize="14sp"
		    a:textStyle="bold"
		    a:textColor="#000"
		    a:gravity="center"	  
			a:text="@string/flight_details_example_text"  
		    />
		<!-- Just decorative, so no content description. -->
		<ImageView
		    a:layout_weight="1"
		    a:layout_width="wrap_content"
		    a:layout_height="0px"
		    a:layout_gravity="center"
		    a:src="@drawable/ic_launcher_web"
		    a:contentDescription="@string/decorative_image_content_description"
		    />
	</LinearLayout>
</FrameLayout>
